adding MaxHeapSize to pom.xml